# cc2subtitles

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  PES_packet.cpp  PES_packet.h  PS_pack.cpp  README  README.md  bootstrap  config.h.in  configure  configure.ac  copyright  libzvbi.patch  main.cpp  myburn  myconfig  mydata.xml  mydistcheck  mythburn.patch  mythburn.py  stream_id.h  tweakdvdxml.py
doc/: ffmpeg_dvd_ntsc.xml  index.html  mydata.xml
doc/mytheme/: description.txt  theme.xml
mythsubtitles/: Decoder.cpp  Decoder.h  IvtvDecoder.cpp  IvtvDecoder.h  Makefile.am  Makefile.in  MpegDecoder.cpp  MpegDecoder.h  NuvDecoder.cpp  NuvDecoder.h  main.cpp  mythsubtitles.pro.in  vbi.cpp  vbi.h
patches/: libzvbi-0.2.31.patch  libzvbi-0.2.33.patch  mythburn-0.21.patch  mythburn-0.23.patch
src/: Makefile.am  Makefile.in  PES_packet.cpp  PES_packet.h  PS_pack.cpp  PS_pack.h  cc2subtitles.cpp  decodempeg.cpp  main.cpp  mpg2util.cpp  mpg2util.h  myburn.in  mytranscode.in  stripivtv.cpp  tweakdvdxml.py.in  vbi.cpp  vbi.h
